--- a/backup.html
+++ b/backup.html
@@ -85,19 +85,9 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link" href="../index.html">
+            <a class="nav-link" href="index.html">
               <i class="fas fa-home me-1"></i> Home
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="../membros/lista-membros.html">
-              <i class="fas fa-users me-1"></i> Membros
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="#">
-              <i class="fas fa-cloud-upload-alt me-1"></i> Backup
-            </a>
+              </a>
           </li>
         </ul>
       </div>
