--- a/cadastro-membros.html
+++ b/cadastro-membros.html
@@ -29,10 +29,14 @@
 
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
   <div class="container">
-    <a class="navbar-brand" href="index.html">Cadastro da Igreja</a>
+    <a class="navbar-brand" href="#">
+        <i class="fas fa-users"></i>Cadastro de Membros
+      </a>
+
     
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
       <span class="navbar-toggler-icon"></span>
+  
     </button>
     
     <div class="collapse navbar-collapse" id="navbarNav">
