--- a/cadastro-membros.html
+++ b/cadastro-membros.html
@@ -30,7 +30,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
   <div class="container">
     <a class="navbar-brand" href="#">
-        <i class="fas fa-users"></i>Cadastro de Membros
+        <i class="fas fa-users me-2"></i>Cadastro de Membros
       </a>
 
     
