--- a/aniversariantes.html
+++ b/aniversariantes.html
@@ -54,9 +54,10 @@
 
   <!-- 🔹 Navbar -->
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-  <div class="container">
-    <a class="navbar-brand" href="index.html">Aniversariantes</a>
-    
+    <div class="container">
+      <a class="navbar-brand" href="#">
+        <i class="fas fa-birthday-cake me-2"></i>Aniversariantes
+      </a>  
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
       <span class="navbar-toggler-icon"></span>
     </button>
