--- a/index.html
+++ b/index.html
@@ -211,14 +211,17 @@
                 <i class="fas fa-tachometer-alt"></i>
                 <span>Dashboard</span>
             </a>
-            <a href="listagem.html" class="nav-item">
-                <i class="fas fa-list"></i>
-                <span>Listagem</span>
-            </a>
+           
             <a href="cadastro-membros.html" class="nav-item">
                 <i class="fas fa-users"></i>
                 <span>Cadastrar Membros</span>
             </a>
+
+            <a href="listagem.html" class="nav-item">
+                <i class="fas fa-list"></i>
+                <span>Lista de Membros</span>
+            </a>
+                
             <a href="aniversariantes.html" class="nav-item">
                 <i class="fas fa-birthday-cake"></i>
                 <span>Aniversariantes</span>
