--- a/relogio/index.html
+++ b/relogio/index.html
@@ -112,8 +112,9 @@
     <!-- 🔹 Navbar -->
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
   <div class="container">
-    <a class="navbar-brand">Relógio de Oração</a>
-    
+      <a class="navbar-brand" href="#">
+        <i class="fas fa-clock me-2"></i>Relógio de Oração
+      </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
       <span class="navbar-toggler-icon"></span>
     </button>
