--- a/presenca/lista.html
+++ b/presenca/lista.html
@@ -71,8 +71,9 @@
   <!-- 🔹 Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand">Presença Culto</a>
-      
+      <a class="navbar-brand" href="#">
+        <i class="fas fa-church me-2"></i>Presença Culto
+      </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
