--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
             </a>
             <a href="register.html" class="nav-item" id="adminMenuItem" style="display: none;">
                 <i class="fas fa-user-plus"></i>
-                <span>Cadastrar Usuários</span>
+                <span>Gerenciar Usuários</span>
             </a>
         </div>
     </div>
