--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                 <span>Cadastrar Membros</span>
             </a>
 
-            <a href="listagem.html" class="nav-item">
+            <a href="listagem.html" class="nav-item" id="adminMenuItem" style="display: none;">
                 <i class="fas fa-list"></i>
                 <span>Lista de Membros</span>
             </a>
@@ -230,11 +230,11 @@
                 <i class="fas fa-clock"></i>
                 <span>Relógio de Oração</span>
             </a>
-            <a href="presenca/lista.html" class="nav-item">
+            <a href="presenca/lista.html" class="nav-item" id="adminMenuItem" style="display: none;">
                 <i class="fas fa-church"></i>
                 <span>Presença Cultos</span>
             </a>
-            <a href="backup.html" class="nav-item">
+            <a href="backup.html" class="nav-item" id="adminMenuItem" style="display: none;">
                 <i class="fas fa-database"></i>
                 <span>Backup e Restauração</span>
             </a>
