--- a/backup.html
+++ b/backup.html
@@ -8,253 +8,197 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
 <style>
-  /* Estilos personalizados */
-  body {
-    padding-top: 70px; /* Espaço para o navbar fixo */
-    background-color: #f8f9fa;
-  }
-  
-  .navbar {
-    background-color: #4CAF50; /* Verde */
-    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-  }
-  
-  .navbar-brand, .nav-link {
-    color: white !important;
-  }
-  
-  .navbar-brand:hover, .nav-link:hover {
-    color: #e0e0e0 !important;
-  }
-  
-  .card {
-    border-radius: 10px;
-    box-shadow: 0 4px 6px rgba(0,0,0,0.05);
-    margin-bottom: 20px;
-    border: none;
-  }
-  
-  .card-header {
-    background-color: #4CAF50;
-    color: white;
-    border-radius: 10px 10px 0 0 !important;
-  }
-  
-  #preview {
-    font-size: 14px;
-    background-color: #f8f9fa;
-    border-radius: 5px;
-  }
-  
-  .progress {
-    height: 25px;
-    border-radius: 5px;
-  }
-  
-  .progress-bar {
-    background-color: #4CAF50;
-  }
-  
-  .btn-primary {
-    background-color: #4CAF50;
-    border-color: #4CAF50;
-  }
-  
-  .btn-primary:hover {
-    background-color: #3e8e41;
-    border-color: #3e8e41;
-  }
-  
-  .btn-danger {
-    background-color: #f44336;
-    border-color: #f44336;
-  }
+/* … estilos originais … */
+body {
+  padding-top: 70px;
+  background-color: #f8f9fa;
+}
+.navbar { background-color: #4CAF50; box-shadow: 0 2px 4px rgba(0,0,0,0.1); }
+.navbar-brand, .nav-link { color: white !important; }
+.navbar-brand:hover, .nav-link:hover { color: #e0e0e0 !important; }
+.card {
+  border-radius: 10px;
+  box-shadow: 0 4px 6px rgba(0,0,0,0.05);
+  margin-bottom: 20px;
+  border: none;
+}
+.card-header { background-color: #4CAF50; color: white; border-radius: 10px 10px 0 0 !important; }
+#preview { font-size: 14px; background-color: #f8f9fa; border-radius: 5px; }
+.progress { height: 25px; border-radius: 5px; }
+.progress-bar { background-color: #4CAF50; }
+.btn-primary { background-color: #4CAF50; border-color: #4CAF50; }
+.btn-primary:hover { background-color: #3e8e41; border-color: #3e8e41; }
+.btn-danger { background-color: #f44336; border-color: #f44336; }
 </style>
 </head>
 
 <body>
-  <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-    <div class="container">
-      <a class="navbar-brand" href="#">
-        <i class="fas fa-database me-2"></i>Backup Firebase
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-        <span class="navbar-toggler-icon"></span>
+
+<!-- Navbar -->
+<nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+  <div class="container">
+    <a class="navbar-brand" href="#"><i class="fas fa-database me-2"></i>Backup Firebase</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="index.html"><i class="fas fa-home me-1"></i> Home</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+<!-- Conteúdo -->
+<div class="container py-5 adminContent">
+  <h1 class="mb-4 text-center"><i class="fas fa-cloud me-2"></i>Backup & Restauração</h1>
+
+  <div class="card">
+    <div class="card-header">
+      <h5 class="mb-0"><i class="fas fa-download me-2"></i>Backup do Banco de Dados</h5>
+    </div>
+    <div class="card-body">
+      <p class="card-text">Crie um backup completo do seu banco de dados Firebase em formato JSON.</p>
+      <button class="btn btn-primary" id="backup-db">
+        <i class="fas fa-file-download me-2"></i>Gerar Backup
       </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">
-              <i class="fas fa-home me-1"></i> Home
-              </a>
-          </li>
-        </ul>
-      </div>
     </div>
-  </nav>
-
-  <div class="container py-5">
-    <h1 class="mb-4 text-center"><i class="fas fa-cloud me-2"></i>Backup & Restauração</h1>
-
-    <div class="card">
-      <div class="card-header">
-        <h5 class="mb-0"><i class="fas fa-download me-2"></i>Backup do Banco de Dados</h5>
-      </div>
-      <div class="card-body">
-        <p class="card-text">Crie um backup completo do seu banco de dados Firebase em formato JSON.</p>
-        <button class="btn btn-primary" id="backup-db">
-          <i class="fas fa-file-download me-2"></i>Gerar Backup
-        </button>
-      </div>
-    </div>
-
-    <div class="card">
-      <div class="card-header">
-        <h5 class="mb-0"><i class="fas fa-upload me-2"></i>Restaurar Banco de Dados</h5>
-      </div>
-      <div class="card-body">
-        <p class="card-text">Selecione um arquivo de backup (.json) para restaurar seus dados.</p>
-        <div class="mb-3">
-          <input type="file" class="form-control" id="restaurar-db" accept=".json">
-        </div>
-        <div class="mb-3">
-          <label class="form-label">Pré-visualização:</label>
-          <pre id="preview" class="bg-light p-3 border rounded" style="max-height: 300px; overflow:auto;"></pre>
-        </div>
-        <button class="btn btn-danger" id="confirm-restore" disabled>
-          <i class="fas fa-redo me-2"></i>Confirmar Restauração
-        </button>
-      </div>
-    </div>
-
-    <div class="progress mt-4">
-      <div class="progress-bar" id="progress-bar" role="progressbar" style="width: 0%"></div>
-    </div>
-    <div class="text-center mt-2" id="progress-label"></div>
   </div>
 
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
-    import { getDatabase, ref, get, set } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-database.js";
+  <div class="card">
+    <div class="card-header">
+      <h5 class="mb-0"><i class="fas fa-upload me-2"></i>Restaurar Banco de Dados</h5>
+    </div>
+    <div class="card-body">
+      <p class="card-text">Selecione um arquivo de backup (.json) para restaurar seus dados.</p>
+      <div class="mb-3">
+        <input type="file" class="form-control" id="restaurar-db" accept=".json">
+      </div>
+      <div class="mb-3">
+        <label class="form-label">Pré-visualização:</label>
+        <pre id="preview" class="bg-light p-3 border rounded" style="max-height: 300px; overflow:auto;"></pre>
+      </div>
+      <button class="btn btn-danger" id="confirm-restore" disabled>
+        <i class="fas fa-redo me-2"></i>Confirmar Restauração
+      </button>
+    </div>
+  </div>
 
-    // 🔷 Configuração do Firebase
-    const firebaseConfig = {
-      apiKey: "AIzaSyCv6pzl34tyPTARtGxV6g2AJfkrtQeA-xU",
-      authDomain: "cadastro-igreja-23042.firebaseapp.com",
-      databaseURL: "https://cadastro-igreja-23042-default-rtdb.firebaseio.com",
-      projectId: "cadastro-igreja-23042",
-      storageBucket: "cadastro-igreja-23042.appspot.com",
-      messagingSenderId: "977906864836",
-      appId: "1:977906864836:web:1a21a29f4b941ac5aeaf91"
-    };
-    const app = initializeApp(firebaseConfig);
-    const db = getDatabase(app);
+  <div class="progress mt-4">
+    <div class="progress-bar" id="progress-bar" role="progressbar" style="width: 0%"></div>
+  </div>
+  <div class="text-center mt-2" id="progress-label"></div>
+</div>
 
-    // Backup do Database
-    document.getElementById('backup-db').addEventListener('click', async () => {
-      resetProgress();
-      setProgress(10, "Iniciando backup...");
-      const snapshot = await get(ref(db, '/'));
-      const dados = snapshot.val();
-      setProgress(50, "Preparando arquivo...");
-      await new Promise(r => setTimeout(r, 500)); // Simula progresso
-      const blob = new Blob([JSON.stringify(dados, null, 2)], {type : 'application/json'});
-      const link = document.createElement('a');
-      link.href = URL.createObjectURL(blob);
-      link.download = `backup-database-${new Date().toISOString()}.json`;
-      setProgress(90, "Pronto para baixar...");
-      await new Promise(r => setTimeout(r, 500));
-      link.click();
-      setProgress(100, "Backup concluído!");
-    });
-
-    // Pré-visualizar e Restaurar Database
-    document.getElementById('restaurar-db').addEventListener('change', async (e) => {
-      resetProgress();
-      const file = e.target.files[0];
-      if (!file) return;
-      const text = await file.text();
-      const json = JSON.parse(text);
-
-      // Exibir pré-visualização
-      const preview = document.getElementById("preview");
-      preview.textContent = JSON.stringify(json, null, 2);
-      document.getElementById("confirm-restore").disabled = false;
-
-      // Salvar os dados para confirmar depois
-      window.dadosParaRestaurar = json;
-    });
-
-    document.getElementById('confirm-restore').addEventListener('click', async () => {
-      if (!window.dadosParaRestaurar) return;
-      setProgress(10, "Iniciando restauração...");
-      await new Promise(r => setTimeout(r, 500));
-      await set(ref(db, '/'), window.dadosParaRestaurar);
-      setProgress(100, "Restauração concluída!");
-      alert("Banco de dados restaurado com sucesso!");
-      document.getElementById("confirm-restore").disabled = true;
-      document.getElementById("preview").textContent = "";
-      window.dadosParaRestaurar = null;
-    });
-
-    // Funções da barra de progresso
-    function setProgress(percent, text) {
-      const bar = document.getElementById("progress-bar");
-      const label = document.getElementById("progress-label");
-      bar.style.width = percent + "%";
-      bar.setAttribute('aria-valuenow', percent);
-      label.textContent = text;
-    }
-
-    function resetProgress() {
-      setProgress(0, "");
-    }
-  </script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-
-
-
-    <!-- Adiciona esse codigo antes do body para restringir o acesso so para administradores -->
-<div id="accessDenied" style="display:none; text-align:center; margin-top:50px;">
+<!-- Acesso Restrito -->
+<div id="accessDenied" style="display:none; text-align:center; margin-top:100px;">
   <i class="fas fa-exclamation-triangle" style="font-size:48px;color:#f39c12;"></i>
   <h2>Acesso Restrito</h2>
   <p>Somente Administradores</p>
-  <button id="goBackBtn" class="login-btn">Voltar</button>
+  <button id="goBackBtn" class="btn btn-primary mt-3">Voltar</button>
 </div>
 
-<script>
-  async function checkIfAdmin() {
-    const user = firebase.auth().currentUser;
-    if (!user) return false;
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
-    const snapshot = await firebase.database()
-      .ref(`users/${user.uid}/isAdmin`)
-      .get();
+<script type="module">
+import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
+import { getDatabase, ref, get, set } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-database.js";
 
-    return snapshot.exists() && snapshot.val() === true;
-  }
+// 🔷 Configuração do Firebase
+const firebaseConfig = {
+  apiKey: "AIzaSyCv6pzl34tyPTARtGxV6g2AJfkrtQeA-xU",
+  authDomain: "cadastro-igreja-23042.firebaseapp.com",
+  databaseURL: "https://cadastro-igreja-23042-default-rtdb.firebaseio.com",
+  projectId: "cadastro-igreja-23042",
+  storageBucket: "cadastro-igreja-23042.appspot.com",
+  messagingSenderId: "977906864836",
+  appId: "1:977906864836:web:1a21a29f4b941ac5aeaf91"
+};
+const app = initializeApp(firebaseConfig);
+const db = getDatabase(app);
 
-  firebase.auth().onAuthStateChanged(async (user) => {
-    if (user) {
-      const isAdmin = await checkIfAdmin();
-      if (!isAdmin) {
-        document.getElementById('adminContent').style.display = 'none';
-        document.getElementById('authContainer').style.display = 'none';
-        document.getElementById('accessDenied').style.display = 'block';
-      }
-    }
-  });
+// Backup
+document.getElementById('backup-db').addEventListener('click', async () => {
+  resetProgress();
+  setProgress(10, "Iniciando backup...");
+  const snapshot = await get(ref(db, '/'));
+  const dados = snapshot.val();
+  setProgress(50, "Preparando arquivo...");
+  await new Promise(r => setTimeout(r, 500));
+  const blob = new Blob([JSON.stringify(dados, null, 2)], {type : 'application/json'});
+  const link = document.createElement('a');
+  link.href = URL.createObjectURL(blob);
+  link.download = `backup-database-${new Date().toISOString()}.json`;
+  setProgress(90, "Pronto para baixar...");
+  await new Promise(r => setTimeout(r, 500));
+  link.click();
+  setProgress(100, "Backup concluído!");
+});
 
-  document.getElementById('goBackBtn').addEventListener('click', () => {
-    if (document.referrer) {
-      window.history.back();
-    } else {
-      window.location.href = 'index.html';
-    }
-  });
+// Restaurar
+document.getElementById('restaurar-db').addEventListener('change', async (e) => {
+  resetProgress();
+  const file = e.target.files[0];
+  if (!file) return;
+  const text = await file.text();
+  const json = JSON.parse(text);
+  document.getElementById("preview").textContent = JSON.stringify(json, null, 2);
+  document.getElementById("confirm-restore").disabled = false;
+  window.dadosParaRestaurar = json;
+});
+
+document.getElementById('confirm-restore').addEventListener('click', async () => {
+  if (!window.dadosParaRestaurar) return;
+  setProgress(10, "Iniciando restauração...");
+  await new Promise(r => setTimeout(r, 500));
+  await set(ref(db, '/'), window.dadosParaRestaurar);
+  setProgress(100, "Restauração concluída!");
+  alert("Banco de dados restaurado com sucesso!");
+  document.getElementById("confirm-restore").disabled = true;
+  document.getElementById("preview").textContent = "";
+  window.dadosParaRestaurar = null;
+});
+
+// Barra de progresso
+function setProgress(percent, text) {
+  const bar = document.getElementById("progress-bar");
+  const label = document.getElementById("progress-label");
+  bar.style.width = percent + "%";
+  bar.setAttribute('aria-valuenow', percent);
+  label.textContent = text;
+}
+function resetProgress() { setProgress(0, ""); }
 </script>
 
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
+
+<script>
+firebase.auth().onAuthStateChanged(async (user) => {
+  if (!user) {
+    window.location.href = 'login.html';
+    return;
+  }
+  const snapshot = await firebase.database()
+    .ref(`users/${user.uid}/isAdmin`)
+    .get();
+
+  if (!snapshot.exists() || snapshot.val() !== true) {
+    document.querySelector('.adminContent').style.display = 'none';
+    document.getElementById('accessDenied').style.display = 'block';
+  }
+});
+
+document.getElementById('goBackBtn').addEventListener('click', () => {
+  if (document.referrer) {
+    window.history.back();
+  } else {
+    window.location.href = 'index.html';
+  }
+});
+</script>
 
 </body>
 </html>
