--- a/listagem.html
+++ b/listagem.html
@@ -15,22 +15,9 @@ body { padding-top: 70px; }
   border-radius: 50%;
   margin-right: 10px;
 }
-
-  .navbar {
-  background-color: #4CAF50; /* verde */
-}
-
-.navbar .nav-link,
-.navbar .navbar-brand {
-  color: #fff;
-}
-
-.navbar .nav-link:hover,
-.navbar .navbar-brand:hover {
-  color: #ddd;
-}
-
-  
+.navbar { background-color: #4CAF50; }
+.navbar .nav-link, .navbar .navbar-brand { color: #fff; }
+.navbar .nav-link:hover, .navbar .navbar-brand:hover { color: #ddd; }
 .membro-item {
   display: flex;
   align-items: center;
@@ -45,9 +32,7 @@ body { padding-top: 70px; }
   color: inherit;
   flex-grow: 1;
 }
-.checkbox-selecao {
-  display: none;
-}
+.checkbox-selecao { display: none; }
 </style>
 </head>
 <body>
@@ -55,26 +40,19 @@ body { padding-top: 70px; }
 <!-- 🔹 Navbar -->
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
   <div class="container">
-      <a class="navbar-brand" href="#">
-        <i class="fas fa-list me-2"></i>Lista de Membros
-      </a>
-    
+    <a class="navbar-brand" href="#"><i class="fas fa-list me-2"></i>Lista de Membros</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
       <span class="navbar-toggler-icon"></span>
     </button>
-    
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav me-auto">
-        <!-- Botão Home -->
         <li class="nav-item">
-          <a class="nav-link" href="index.html">
-            <i class="fas fa-home me-1"></i> Home
-          </a>
+          <a class="nav-link" href="index.html"><i class="fas fa-home me-1"></i> Home</a>
         </li>
       </ul>
     </div>
   </div> 
-  </nav>
+</nav>
 
 <div class="container mt-4">
   <div class="mb-3 d-flex justify-content-between">
@@ -85,11 +63,60 @@ body { padding-top: 70px; }
     <button id="btnExcluir" class="btn btn-danger d-none">Excluir Selecionados</button>
   </div>
 
-  <!-- Mensagem de sucesso -->
   <div id="mensagemPDF"></div>
-
   <div id="lista-membros" class="list-group"></div>
 </div>
+
+<!-- 🚫 Acesso Restrito -->
+<div id="accessDenied" style="display:none; text-align:center; margin-top:100px;">
+  <i class="fas fa-exclamation-triangle" style="font-size:48px;color:#f39c12;"></i>
+  <h2>Acesso Restrito</h2>
+  <p>Somente Administradores</p>
+  <button id="goBackBtn" class="btn btn-primary mt-3">Voltar</button>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
+
+<script>
+// Inicializa Firebase
+const firebaseConfig = {
+  apiKey: "AIzaSyCv6pzl34tyPTARtGxV6g2AJfkrtQeA-xU",
+  authDomain: "cadastro-igreja-23042.firebaseapp.com",
+  databaseURL: "https://cadastro-igreja-23042-default-rtdb.firebaseio.com",
+  projectId: "cadastro-igreja-23042",
+  storageBucket: "cadastro-igreja-23042.appspot.com",
+  messagingSenderId: "977906864836",
+  appId: "1:977906864836:web:1a21a29f4b941ac5aeaf91"
+};
+firebase.initializeApp(firebaseConfig);
+
+// Verifica admin
+firebase.auth().onAuthStateChanged(async (user) => {
+  if (!user) {
+    window.location.href = 'login.html';
+    return;
+  }
+
+  const snapshot = await firebase.database()
+    .ref(`users/${user.uid}/isAdmin`).get();
+
+  if (!snapshot.exists() || snapshot.val() !== true) {
+    document.querySelector('.container').style.display = 'none';
+    document.getElementById('accessDenied').style.display = 'block';
+  }
+});
+
+document.getElementById('goBackBtn').addEventListener('click', () => {
+  if (document.referrer) {
+    window.history.back();
+  } else {
+    window.location.href = 'index.html';
+  }
+});
+</script>
 
 <script type="module">
 import { db } from './firebase-config.js';
@@ -109,44 +136,39 @@ function carregarMembros(data) {
   }
 
   const membrosArray = Object.entries(data).map(([id, m]) => {
-  const funcao = (m.funcao || "").toLowerCase();
-  let ordemFuncao = 6;
-  if (funcao === "pastor") ordemFuncao = 1;
-  else if (funcao === "missionario" || funcao === "missionario(a)") ordemFuncao = 2;
-  else if (funcao === "diacono") ordemFuncao = 3;
-  else if (funcao === "obreiro" || funcao === "obreiro(a)") ordemFuncao = 4;
-  else if (funcao === "membro") ordemFuncao = 5;
+    const funcao = (m.funcao || "").toLowerCase();
+    let ordemFuncao = 6;
+    if (funcao === "pastor") ordemFuncao = 1;
+    else if (funcao === "missionario" || funcao === "missionario(a)") ordemFuncao = 2;
+    else if (funcao === "diacono") ordemFuncao = 3;
+    else if (funcao === "obreiro" || funcao === "obreiro(a)") ordemFuncao = 4;
+    else if (funcao === "membro") ordemFuncao = 5;
 
-  return {
-    id,
-    ...m,
-    ordemFuncao
-  };
-});
+    return { id, ...m, ordemFuncao };
+  });
 
-// ordena por ordem da função e depois por nome
-membrosArray.sort((a, b) => {
-  const ordemFuncao = a.ordemFuncao - b.ordemFuncao;
-  if (ordemFuncao !== 0) return ordemFuncao;
-  return (a.nome || "").localeCompare(b.nome || "");
-});
+  membrosArray.sort((a, b) => {
+    const ordemFuncao = a.ordemFuncao - b.ordemFuncao;
+    if (ordemFuncao !== 0) return ordemFuncao;
+    return (a.nome || "").localeCompare(b.nome || "");
+  });
 
-for (const membro of membrosArray) {
-  const item = document.createElement("div");
-  item.className = "list-group-item membro-item";
+  for (const membro of membrosArray) {
+    const item = document.createElement("div");
+    item.className = "list-group-item membro-item";
 
-  item.innerHTML = `
-    <input type="checkbox" class="form-check-input me-2 checkbox-selecao" data-id="${membro.id}">
-    <a href="ficha.html?id=${membro.id}" class="info-membro">
-      <img src="${membro.fotoURL || ''}" class="foto-miniatura" alt="Foto">
-      <div>
-        <div><strong>${membro.nome}</strong></div>
-        <small>${membro.funcao}</small>
-      </div>
-    </a>
-  `;
-  lista.appendChild(item);
-}
+    item.innerHTML = `
+      <input type="checkbox" class="form-check-input me-2 checkbox-selecao" data-id="${membro.id}">
+      <a href="ficha.html?id=${membro.id}" class="info-membro">
+        <img src="${membro.fotoURL || ''}" class="foto-miniatura" alt="Foto">
+        <div>
+          <div><strong>${membro.nome}</strong></div>
+          <small>${membro.funcao}</small>
+        </div>
+      </a>
+    `;
+    lista.appendChild(item);
+  }
 
   atualizarVisibilidadeCheckboxes();
 }
@@ -179,205 +201,6 @@ onValue(membrosRef, (snapshot) => {
   carregarMembros(data);
 });
 </script>
-
-<script>
-const btnExportarPDF = document.getElementById("btnExportarPDF");
-
-btnExportarPDF.addEventListener("click", async () => {
-  btnExportarPDF.disabled = true;
-  btnExportarPDF.innerHTML = `
-    <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span> Gerando PDF...
-  `;
-
-  try {
-    const doc = new window.jsPDFGlobal({ orientation: "landscape", unit: "mm", format: "a4", compress: true });
-    const logoUrl = "./logo.png";
-    const img = await new Promise((resolve) => {
-      const img = new Image();
-      img.onload = () => resolve(img);
-      img.onerror = () => resolve(null);
-      img.src = logoUrl;
-    });
-
-    const pageWidth = doc.internal.pageSize.getWidth();
-    let startY = 15;
-
-    if (img) {
-      const logoWidth = 70;
-      const logoHeight = (img.height / img.width) * logoWidth;
-      const logoX = (pageWidth - logoWidth) / 2;
-
-      doc.addImage(img, 'JPEG', logoX, 15, logoWidth, logoHeight);
-      doc.setFontSize(14);
-      doc.text("Famílias Vivendo na Graça e Unção do Espírito", pageWidth / 2, 15 + logoHeight + 8, { align: "center" });
-      doc.setFontSize(12);
-      doc.text("Lista Completa de Membros", pageWidth / 2, 15 + logoHeight + 15, { align: "center" });
-
-      startY = 15 + logoHeight + 25;
-    }
-
-    const { db } = await import("./firebase-config.js");
-    const { get, ref, child } = await import("https://www.gstatic.com/firebasejs/9.23.0/firebase-database.js");
-    const snapshot = await get(child(ref(db), "membros"));
-
-    if (!snapshot.exists()) {
-      alert("Nenhum membro encontrado.");
-      return;
-    }
-
-    const membrosArray = Object.values(snapshot.val())
-    .map(m => {
-      const funcao = (m.funcao || "").toLowerCase();
-      let ordemFuncao = 6;
-      if (funcao === "pastor") ordemFuncao = 1;
-      else if (funcao === "missionario" || funcao === "missionario(a)") ordemFuncao = 2;
-      else if (funcao === "diacono") ordemFuncao = 3;
-      else if (funcao === "obreiro" || funcao === "obreiro(a)") ordemFuncao = 4;
-      else if (funcao === "membro") ordemFuncao = 5;
-
-      return {
-        ...m,
-        ordemFuncao,
-        sexoFormatado: m.sexo === "M" || (m.sexo || "").toLowerCase() === "masculino" ? "Masculino" :
-                       m.sexo === "F" || (m.sexo || "").toLowerCase() === "feminino" ? "Feminino" :
-                       "Não informado",
-        nomeFormatado: m.nome ? m.nome.toUpperCase() : "Não informado",
-        funcaoFormatada: m.funcao ? m.funcao.toUpperCase() : "Não informado"
-      };
-    })
-    .sort((a, b) => {
-      const ordemFuncao = a.ordemFuncao - b.ordemFuncao;
-      if (ordemFuncao !== 0) return ordemFuncao;
-      return a.nome?.localeCompare(b.nome);
-    })
-    .map(m => {
-      const partesEndereco = [
-        m.endereco,
-        m.numero && `Nº${m.numero}`,
-        m.bairro,
-        m.cidade,
-        m.estado
-      ].filter(Boolean);
-
-      const enderecoCompleto = partesEndereco.join(", ");
-
-      return [
-        m.nomeFormatado,
-        m.nascimento ? formatDate(m.nascimento) : "Não informado",
-        m.sexoFormatado,
-        m.telefone || "Não informado",
-        m.funcaoFormatada,
-        m.batismo ? formatDate(m.batismo) : "Não informado",
-        enderecoCompleto
-      ];
-    });
-
-    doc.autoTable({
-  head: [["NOME", "NASCIM", "SEXO", "TELEFONE", "FUNÇÃO", "BATISMO", "ENDEREÇO"]],
-  body: membrosArray,
-  startY: startY,
-  margin: { top: 10, bottom: 15 },
-  styles: { fontSize: 10 },
-  headStyles: { fillColor: [0, 128, 0], textColor: [255, 255, 255], fontSize: 10, fontStyle: 'bold' },
-  columnStyles: {
-    0: { cellWidth: 60 },  // Nome
-    6: { cellWidth: 80 }   // Endereço
-    // As colunas 1 a 5 ficam automáticas
-  },
-  didDrawPage: function(data) {
-    doc.setFontSize(8);
-    doc.text(`Página ${data.pageNumber}`, pageWidth / 2, doc.internal.pageSize.getHeight() - 10, { align: "center" });
-    const now = new Date();
-    doc.text(`Gerado em: ${now.toLocaleString("pt-BR")}`, pageWidth - 10, doc.internal.pageSize.getHeight() - 10, { align: "right" });
-  }
-});
-
-    doc.save("Lista_Membros.pdf");
-    mostrarMensagemPDF("✅ PDF gerado com sucesso!");
-
-  } catch (error) {
-    console.error("Erro ao gerar PDF:", error);
-    alert("Erro ao gerar PDF: " + error.message);
-  } finally {
-    btnExportarPDF.disabled = false;
-    btnExportarPDF.innerHTML = `Exportar PDF`;
-  }
-});
-
-function formatDate(dateString) {
-  if (!dateString) return "";
-  try {
-    const [ano, mes, dia] = dateString.split("-");
-    return `${dia}/${mes}/${ano}`;
-  } catch {
-    return dateString;
-  }
-}
-
-function mostrarMensagemPDF(mensagem) {
-  const container = document.getElementById("mensagemPDF");
-  container.innerHTML = `
-    <div class="alert alert-success alert-dismissible fade show mt-3" role="alert">
-      ${mensagem}
-      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-    </div>
-  `;
-}
-</script>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.25/jspdf.plugin.autotable.min.js"></script>
-<script>
-window.jsPDFGlobal = window.jspdf.jsPDF;
-</script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-
-
-
-
-  
-
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
-
-<div id="accessDenied" style="display:none; text-align:center; margin-top:50px;">
-  <i class="fas fa-exclamation-triangle" style="font-size:48px;color:#f39c12;"></i>
-  <h2>Acesso Restrito</h2>
-  <p>Somente Administradores</p>
-  <button id="goBackBtn" class="login-btn">Voltar</button>
-</div>
-
-<script>
-  async function checkIfAdmin() {
-    const user = firebase.auth().currentUser;
-    if (!user) return false;
-
-    const snapshot = await firebase.database()
-      .ref(`users/${user.uid}/isAdmin`)
-      .get();
-
-    return snapshot.exists() && snapshot.val() === true;
-  }
-
-  firebase.auth().onAuthStateChanged(async (user) => {
-    if (user) {
-      const isAdmin = await checkIfAdmin();
-      if (!isAdmin) {
-        document.querySelector('.container').style.display = 'none';
-        document.getElementById('accessDenied').style.display = 'block';
-      }
-    }
-  });
-
-  document.getElementById('goBackBtn').addEventListener('click', () => {
-    if (document.referrer) {
-      window.history.back();
-    } else {
-      window.location.href = 'index.html';
-    }
-  });
-</script>
-
 
 </body>
 </html>
