--- a/backup.html
+++ b/backup.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -103,7 +104,6 @@ import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/fireba
 import { getDatabase, ref, get, set } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-database.js";
 import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
 
-// 🔷 Configuração do Firebase
 const firebaseConfig = {
   apiKey: "AIzaSyCv6pzl34tyPTARtGxV6g2AJfkrtQeA-xU",
   authDomain: "cadastro-igreja-23042.firebaseapp.com",
@@ -131,25 +131,32 @@ onAuthStateChanged(auth, async (user) => {
   }
 });
 
-// Backup
 document.getElementById('backup-db').addEventListener('click', async () => {
   resetProgress();
   setProgress(10, "Iniciando backup...");
-  const snapshot = await get(ref(db, '/'));
-  const dados = snapshot.val();
-  setProgress(50, "Preparando arquivo...");
-  await new Promise(r => setTimeout(r, 500));
+
+  const dados = {};
+  const paths = ['membros', 'presencas_culto', 'relogio', 'users'];
+  let percent = 10;
+
+  for (const path of paths) {
+    setProgress(percent, `Lendo ${path}...`);
+    const snapshot = await get(ref(db, `/${path}`));
+    dados[path] = snapshot.exists() ? snapshot.val() : {};
+    percent += 20;
+    await new Promise(r => setTimeout(r, 200));
+  }
+
+  setProgress(90, "Preparando arquivo...");
   const blob = new Blob([JSON.stringify(dados, null, 2)], {type : 'application/json'});
   const link = document.createElement('a');
   link.href = URL.createObjectURL(blob);
   link.download = `backup-database-${new Date().toISOString()}.json`;
-  setProgress(90, "Pronto para baixar...");
   await new Promise(r => setTimeout(r, 500));
   link.click();
   setProgress(100, "Backup concluído!");
 });
 
-// Restaurar
 document.getElementById('restaurar-db').addEventListener('change', async (e) => {
   resetProgress();
   const file = e.target.files[0];
@@ -163,9 +170,18 @@ document.getElementById('restaurar-db').addEventListener('change', async (e) => 
 
 document.getElementById('confirm-restore').addEventListener('click', async () => {
   if (!window.dadosParaRestaurar) return;
-  setProgress(10, "Iniciando restauração...");
-  await new Promise(r => setTimeout(r, 500));
-  await set(ref(db, '/'), window.dadosParaRestaurar);
+
+  const dados = window.dadosParaRestaurar;
+  const paths = Object.keys(dados);
+  let percent = 10;
+
+  for (const path of paths) {
+    setProgress(percent, `Restaurando ${path}...`);
+    await set(ref(db, `/${path}`), dados[path]);
+    percent += Math.floor(80 / paths.length);
+    await new Promise(r => setTimeout(r, 300));
+  }
+
   setProgress(100, "Restauração concluída!");
   alert("Banco de dados restaurado com sucesso!");
   document.getElementById("confirm-restore").disabled = true;
