--- a/listagem.html
+++ b/listagem.html
@@ -53,6 +53,16 @@ body { padding-top: 70px; }
 </head>
 <body>
 
+  <!-- Verificação de Admin -->
+  <script type="module">
+    import { checkAdminAuth } from './auth.js';
+    if (!await checkAdminAuth()) {
+      window.location.href = 'index.html';
+    }
+  </script>
+
+    
+
 <!-- 🔹 Navbar -->
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
   <div class="container">
