--- a/presenca/lista.html
+++ b/presenca/lista.html
@@ -85,6 +85,12 @@
             <a class="nav-link" href="../index.html">
               <i class="fas fa-home me-1"></i> Home
             </a>
+
+          <li class="nav-item">
+            <a class="nav-link" href="lista_culto.html">
+              <i class="fas fa-church me-1"></i> Consulta Lista de Presença
+            </a>
+            
           </li>
         </ul>
       </div>
